kuard-pod-health.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard
spec:
  containers:
    - name : kuard
      image: gcr.io/kuar-demo/kuard-amd64:blue
  livenessProbe:
      httpGet:
          path: /healthy
          port: 8080
      initialDelaySeconds: 5
      timeoutSeconds: 1
      periodSeconds: 10
      failureThreshold: 3
  ports:
      - containerPort: 8080
        name: http
        protocol: TCP
