kuard-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard
spec:
  containers:
    - name: kuard
      image: gcr.io/kuar-demo/kuard-amd64:blue      
  ports:
    - containerPort: 8080
      name: http
      protocol: TCP
